# HTS-ViT

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: 01_foundations.md  02_datatropisms.md  03_systemic_transformations.md  04_iterative_puncture.md  05_hts_vit.md  06_api_reference.md
examples/: 01_quickstart.py  02_hts_vit_minidemo.py  03_renderer_demo.py
src/tensorfield/: __init__.py  attention.py  cdmn.py  datatropisms.py  hts_vit.py  hypergraph.py  puncture.py  renderer.py
tests/: test_basic.py
wolfram/: dissemination_operator.wl  geodesic_convolution.wl  propagate_tensorfield.wl
