[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorfield-hts"
version = "0.1.0"
description = "Hypergraph Tensor Supersystems: HTS, HTS‑ViT, CDMNs, Datatropisms"
readme = "README.md"
authors = [{name = "Tensorfield Lab"}]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "networkx>=3.0",
  "scipy>=1.9",
  "plotly>=5.15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
